<resources>
    <string name="app_name">FasTugaDriver</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_selected_order_details">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Password must be at least 8 characters</string>
    <string name="invalid_confirmation_password">Password and Confirmation Password don’t match</string>
    <string name="invalid_phone">Invalid Phone</string>
    <string name="register_failed">"Register failed"</string>
    <string name="register_text">Register Driver</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_license_plate">License Plate</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_name">Name</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login failed"</string>
    <string name="invalid_license_plate">"License Plate Valid formats: XX-XX-XX or XX XX XX"</string>
    <string name="title_activity_main">FasTugaDriver</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="bottom_nav_map">Map</string>
    <string name="bottom_nav_profile">Profile</string>
    <string name="bottom_nav_orders">Orders</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_fragment_orders">Orders</string>
    <string name="title_fragment_profile">Profile</string>
    <string name="action_profile_logout">Logout</string>
    <string name="allow_location_auth">Allow</string>
    <string name="text_location_auth">To use this application you have to allow the access to your PRIVATE location</string>
    <string name="accept_location_auth">Accept</string>
    <string name="no_location_auth">Dont Accept</string>
    <string name="orders_title">Orders</string>
    <string name="action_profile_edit">Edit Profile</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="mapbox_access_token">pk.eyJ1IjoiYnJ1bm9zaWx2YTAwIiwiYSI6ImNsYmFvN3F0aDBhcm8zdXBkaXp1eDBtZGEifQ.0djWh5zBBWNcDN9EoNc2sw</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_edit_profile_select_photo">Select Photo</string>
    <string name="prompt_old_password">Old Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="prompt_confirm_new_password">Confirm new Password</string>
    <string name="action_edit_profile_update">Update</string>
    <string name="action_profile_history">Orders History</string>
    <string name="title_activity_orders_history">OrdersHistory</string>
    <string name="history_orders_title">Orders Completed History</string>
    <string name="selected_order_title" />
    <string name="selected_order_ticket_number">Ticket Number: </string>
    <string name="selected_order_tax_fee">Tax Fee:</string>
    <string name="selected_order_start_delivery">Start Delivery</string>
    <string name="selected_order_cancel_btn">Cancel Order</string>
    <string name="history_notifications_title">Notifications</string>
    <string name="selected_order_cancel_reason_empty">Cancellation reason empty</string>
    <string name="title_activity_turn_by_turn">TurnByTurnActivity</string>
    <string name="profile_statistics">Statistics</string>
    <string name="statistics_conducted">Deliveries Conducted:</string>
    <string name="statistics_avg_time">Average time to deliver:</string>
    <string name="statistics_total_time">Total time to deliver:</string>
    <string name="statistics_distinct_costumers">Number of distinct costumers:</string>
</resources>