<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/profile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/title_fragment_profile"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/profile_user_image"
            android:layout_width="78dp"
            android:layout_height="87dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/account_circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/profile_list_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/profile_user_image">

            <TextView
                android:id="@+id/profile_detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="name"
                android:textAlignment="center"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/profile_detail_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="email" />

                <TextView
                    android:id="@+id/profile_details_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="phone" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                android:id="@+id/profile_detail_license_plate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="license_plate"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/profile_detail_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Balance"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile_list_options"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_list_details">

            <Button
                android:id="@+id/profile_button_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_profile_edit"
                android:textAlignment="textStart" />

            <Button
                android:id="@+id/profile_button_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_profile_history"
                android:textAlignment="textStart" />

            <Button
                android:id="@+id/profile_button_notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_notifications_title"
                android:textAlignment="textStart" />

            <Button
                android:id="@+id/profile_button_statistics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_statistics"
                android:textAlignment="textStart" />

            <Button
                android:id="@+id/profile_button_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_profile_logout"
                android:textAlignment="textStart" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>